Fix header text size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,10 @@ body:not(.dark-mode) .logo:hover {
         margin-top: 64px !important;
     }
 
+    .header-text {
+        font-size: 18px !important;
+    }
+
     .tip {
         margin-top: 69px;
     }
